fix sidebar gap

--- a/shrunk/css/sidebar.css
+++ b/shrunk/css/sidebar.css
@@ -1,6 +1,7 @@
 /* Sidebar Styles */
 #sidebar-wrapper {
-    height: 100%;
+    min-height: calc(100vh + 10px);
+    max-height: calc(100vh + 71px);
     width: 250px;
     position: absolute;
     z-index: 30;
